Unifying loading game via index.html and express

--- a/index.html
+++ b/index.html
@@ -1,30 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test</title>
-  <style type="text/css">
-    html,body {
-      background-color: #000;
-      color: #fff;
-      font-family: helvetica, arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      font-size: 12pt;
-    }
-
-    #canvas {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      border: 1px solid #555;
-    }
-  </style>
-
-  <script type="text/javascript" src="lib/impact/impact.js"></script>
-  <script type="text/javascript" src="lib/game/main.js"></script>
+  <title>HTML5 strategy</title>
+  <link rel="stylesheet" type="text/css" href="public/stylesheets/styles.css">
+  <script type="text/javascript" src="public/game.min.js"></script>
 </head>
 <body>
   <canvas id="canvas"></canvas>
