Adding castles and underscore

--- a/game.html
+++ b/game.html
@@ -3,6 +3,8 @@
 <head>
   <title>HTML5 strategy</title>
   <link rel="stylesheet" type="text/css" href="public/stylesheets/styles.css">
+  <script type="text/javascript" src="public/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="public/underscore-1.6.0.min.js"></script>
   <script type="text/javascript" src="public/game.min.js"></script>
 </head>
 <body>
